--- a/assets/css/input.css
+++ b/assets/css/input.css
@@ -1,3 +1,11 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@layer utilities {
+  .fill-primary {
+    fill: #0d9488;
+  }
+  .stroke-primary {
+    stroke: #0d9488;
+  }
+}
